--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "title":"Meekdai",
-    "displayTitle":"eekdai",
-    "subTitle":"童话是一种生活态度，仅此而已。",
-    "homeUrl":"http://blog.meekdai.com",
-    "avatarUrl":"http://meekdai.com/avatar.jpg",
+    "title":"Chris.Cai Blog",
+    "displayTitle":"Chris.Cai Blog",
+    "subTitle":"前进前进前进！",
+    "homeUrl":"https://chajiuqqq.github.io/",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/50012686?v=4",
     "faviconUrl":"http://meekdai.com/favicon.ico",
     "singlePage":["link","about"],
     "GMEEK_VERSION":"v2.4"
