--- a/config.json
+++ b/config.json
@@ -6,6 +6,5 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/50012686?v=4",
     "faviconUrl":"http://meekdai.com/favicon.ico",
     "singlePage":["link","about"],
-    "GMEEK_VERSION":"v2.16",
-    "primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />"
+    "GMEEK_VERSION":"last"
 }
