--- a/config.json
+++ b/config.json
@@ -6,5 +6,5 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/50012686?v=4",
     "faviconUrl":"http://meekdai.com/favicon.ico",
     "singlePage":["link","about"],
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"v2.21"
 }
