--- a/config.json
+++ b/config.json
@@ -6,5 +6,7 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/50012686?v=4",
     "faviconUrl":"http://meekdai.com/favicon.ico",
     "singlePage":["link","about"],
-    "GMEEK_VERSION":"v2.21"
+    "GMEEK_VERSION":"v2.22",
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
+    "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>"
 }
