--- a/.github/workflows/Gmeek.yml
+++ b/.github/workflows/Gmeek.yml
@@ -59,7 +59,7 @@ jobs:
           sleep 3
           
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           path: 'docs/.'
           
