--- a/.github/workflows/Gmeek.yml
+++ b/.github/workflows/Gmeek.yml
@@ -58,10 +58,10 @@ jobs:
           git push || echo "nothing to push"
           sleep 3
           
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          path: 'docs/.'
+      # - name: Upload artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     path: 'docs/.'
           
   deploy:
     name: Deploy blog
