--- a/.github/workflows/Gmeek.yml
+++ b/.github/workflows/Gmeek.yml
@@ -59,9 +59,8 @@ jobs:
           sleep 3
           
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: 'github-pages'
           path: 'docs/'
           
   deploy:
